--- a/receiver/pubspec.yaml
+++ b/receiver/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   permission_handler: ^11.0.1
   get_it: ^7.6.4
   provider: ^6.0.5
+  firebase_auth: ^4.12.1
+  cloud_firestore: ^4.12.2
+  google_sign_in: ^6.1.5
+  auth_buttons: ^3.0.2
 
 dev_dependencies:
   flutter_test:
